--- a/Etch-a-sketch/stylesheet.css
+++ b/Etch-a-sketch/stylesheet.css
@@ -1,22 +1,27 @@
+:root{
+    --columns: "";
+    --rows: "";
+}
+
+
 .container{
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 5%;
+    margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(16, 2fr);
-    grid-template-rows: repeat(16, 2fr);
+    grid-template-columns: repeat(var(--columns), 1fr);
+    grid-template-rows: repeat(var(--rows), 1fr);
     height: 600px;
     width: 600px;
-    padding: 50px;
+    padding: 70px;
+    padding-bottom: 100px;
+    border-radius: 25px;
+    background-color: red;
 }
 
 .grids{
-    background-color: white;
+    justify-self: stretch;
+    align-self: stretch;
     border: .5px solid black;
-}
-
-.grids:hover{
-    background-color: green;
+    background-color: white;
 }
 
 .buttons{
@@ -25,4 +30,13 @@
     margin: 0 auto;
     width: 100px;
     height: auto;
+}
+
+#hovered{
+    background-color: black;
+}
+
+#cleared{
+    background-color: white;
+    color: white;
 }
