--- a/Etch-a-sketch/stylesheet.css
+++ b/Etch-a-sketch/stylesheet.css
@@ -3,6 +3,10 @@
     --rows: "";
 }
 
+html{
+    background-color: rgba(228, 251, 184, 0.619);
+    background-image: linear-gradient(rgba(153, 205, 50, 0.619), rgba(228, 251, 184, 0.619));
+}
 
 .container{
     margin: 0 auto;
@@ -11,32 +15,108 @@
     grid-template-rows: repeat(var(--rows), 1fr);
     height: 600px;
     width: 600px;
-    padding: 70px;
-    padding-bottom: 100px;
-    border-radius: 25px;
-    background-color: red;
+    padding-top: 0%;
 }
 
 .grids{
     justify-self: stretch;
     align-self: stretch;
-    border: .5px solid black;
+    border: .1px solid black;
     background-color: white;
+    z-index: 2;
 }
 
 .buttons{
+    position: relative;
+    left:100px;
     text-align: center;
-    display: block;
-    margin: 0 auto;
+    display: inline-block;
+    margin: 40px 555px 90px 555px;
     width: 100px;
     height: auto;
+    z-index: 1;
 }
 
 #hovered{
     background-color: black;
 }
 
-#cleared{
-    background-color: white;
-    color: white;
+.box{
+    position: absolute;
+    right: 380px;
+    top: 10px;
+    width: 680px;
+    height: 650px;
+    padding-bottom: 8%;
+    border-radius: 25px;
+    background-color: red;
+    z-index: 0;
+    box-shadow: 6px 6px 0px 6px rgb(119, 13, 13);
+}
+
+.gridSize{
+    padding: 5px 10px;
+    font-family:Impact, Haettenschweiler;
+    border-radius: 25px;
+    transition-duration: 0.4s;
+}
+
+h1{
+   position: relative;
+   text-shadow: 1.5px 1px 1px goldenrod;
+   left: 870px;
+   z-index: 5;
+   color: antiquewhite;
+   transform:scale(1.5,1);
+   font-family: Brush Script MT, Brush Script Std, cursive;
+}
+
+.knob1{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    bottom: -15px;
+    left: 450px;
+    background-color: rgb(194, 179, 179);
+    border-radius: 90px;
+    box-shadow: 2px 2px 2px grey;
+}
+
+.knob2{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    bottom: -15px;
+    right: 450px;
+    background-color: rgb(194, 179, 179);
+    border-radius: 90px;
+    box-shadow: 2px 2px 2px grey;
+}
+
+.knobTop1{
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    bottom: -10px;
+    left: 452px;
+    background-color: rgba(117, 112, 112, 0.226);
+    border-radius: 90px;
+    box-shadow: 2px 2px grey;
+}
+
+.knobTop2{
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    bottom: -10px;
+    right: 457px;
+    background-color: rgba(117, 112, 112, 0.226);
+    border-radius: 90px;
+    box-shadow: 2px 2px grey;
+}
+
+.gridSize:hover{
+    background-color: rgb(179, 179, 179);
+    color: whitesmoke;
+    box-shadow: 0px 0px 12px rgba(245, 245, 245, 0.742);
 }
